syntax = "proto3";

package date_time;

option go_package = "github.com/area/grpc-go/service";

service DateTimeService {
  // Launch a cron job that check each minutes if the trigger must be activated
  rpc LaunchCronJob(TriggerTimeRequest) returns (TriggerTimeResponse) {}

  rpc DeactivateAction(DeactivateTime) returns (DeactivateTime) {}
}

message TriggerTimeRequest {
  bool activated = 1;
  int32 action_id = 2;

  int32 minutes = 3;
  int32 hours = 4;

  int64 day_month = 5;
  int64 month = 6;
}

message TriggerTimeResponse {
}

message DeactivateTime {
  uint32 action_id = 1;
}
